Fix /ci tab completion throwing exceptions